Numerose modifiche su SAGA